service date visibility fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,6 @@
 .error {
     border-color : red;
   }
+  .hidden {
+    display: none;
+  }
